# testvcpkg

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  build_pair.sh  run.sh  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
consumablelib/: CMakeLists.txt
consumablelib/include/: lib.hpp
consumablelib/src/: lib.cpp
consumingexe/: CMakeLists.txt
consumingexe/src/: main.cpp
data/: titanic_test.csv  titanic_train.csv
pack/: README.md  fibo.nuspec
src/: CMakeLists.txt  main.cxx  main2.cxx  sum_integers.cxx  sum_integers.hpp
src1/: CMakeLists.txt  build.sh
src1/src/: main.cpp
tests/: CMakeLists.txt
